[tool.poetry]
name = "ministarlette"
version = "0.1.0"
description = ""
authors = ["mahiro72 <mahiro.yoshie@gmail.com>"]
readme = "README.md"
packages = [{include = "ministarlette"}]

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = "^0.32.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
